--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ditrix_attendance_scanner",
   "version": "1.0.0",
   "main": "app.js",
-  "module": "module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
@@ -25,6 +25,8 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "sqlite3": "^5.1.7",
+    "url": "^0.11.4"
   }
 }
