--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ditrix_attendance_scanner",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "app.js",
   "type": "module",
   "scripts": {
@@ -20,12 +20,15 @@
   "homepage": "https://github.com/jhonkeithman123/DITrix_Attendance_Scanner_Server#readme",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
+    "nodemailer": "^7.0.10",
     "sqlite3": "^5.1.7",
     "url": "^0.11.4"
   }
