--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.10",
     "sqlite3": "^5.1.7",
     "url": "^0.11.4"
