--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
     "sqlite3": "^5.1.7",
     "url": "^0.11.4"
