--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
+    "firebase-admin": "^13.6.0",
     "jsonwebtoken": "^9.0.2",
     "math-intrinsics": "^1.1.0",
     "multer": "^2.0.2",
